--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <title>THE WEATHER TODAY IN...</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-
 </head>
 
 <body>
@@ -25,7 +24,7 @@
       <h2>THE WEATHER TODAY IN...</h2>
       <div>
         <input type="text" id="city-input" placeholder="search for a city" />
-        <input type="button" value="search" onclick="showData();" />
+        <input type="button" value="search" onclick="showData();"/>
       </div>
     </div>
 
@@ -50,6 +49,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title" id="day1-date">date</h5>
+            <p class="card-text" id="day1-icon">[ icon ]</p>
             <p class="card-text" id="day1-temp">temp: </p>
             <p class="card-text" id="day1-humidity">humidity: </p>
           </div>
@@ -57,6 +57,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title" id="day2-date">date</h5>
+            <p class="card-text" id="day2-icon">[ icon ]</p>
             <p class="card-text" id="day2-temp">temp: </p>
             <p class="card-text" id="day2-humidity">humidity: </p>
           </div>
@@ -64,6 +65,7 @@
         <div class="card">
             <div class="card-body">
               <h5 class="card-title" id="day3-date">date</h5>
+              <p class="card-text" id="day3-icon">[ icon ]</p>
               <p class="card-text" id="day3-temp">temp: </p>
               <p class="card-text" id="day3-humidity">humidity: </p>
             </div>
@@ -71,6 +73,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title" id="day4-date">date</h5>
+              <p class="card-text" id="day4-icon">[ icon ]</p>
               <p class="card-text" id="day4-temp">temp: </p>
               <p class="card-text" id="day4-humidity">humidity: </p>
             </div>
