last push before submitting homework links

--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
     <div class="card-group">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title" id="day1-date">date</h5>
+            <h5 class="card-title" id="day1-date">Day 1</h5>
             <p class="card-text" id="day1-temp">temp: </p>
             <p class="card-text" id="day1-humidity">humidity: </p>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title" id="day2-date">date</h5>
+            <h5 class="card-title" id="day2-date">Day 2</h5>
             <p class="card-text" id="day2-temp">temp: </p>
             <p class="card-text" id="day2-humidity">humidity: </p>
           </div>
         </div>
         <div class="card">
             <div class="card-body">
-              <h5 class="card-title" id="day3-date">date</h5>
+              <h5 class="card-title" id="day3-date">Day 3</h5>
               <p class="card-text" id="day3-temp">temp: </p>
               <p class="card-text" id="day3-humidity">humidity: </p>
             </div>
           </div>
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title" id="day4-date">date</h5>
+              <h5 class="card-title" id="day4-date">Day 4</h5>
               <p class="card-text" id="day4-temp">temp: </p>
               <p class="card-text" id="day4-humidity">humidity: </p>
             </div>
           </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title" id="day5-date">date</h5>
+            <h5 class="card-title" id="day5-date">Day 5</h5>
             <p class="card-text" id="day5-temp">temp: </p>
             <p class="card-text" id="day5-humidity">humidity: </p>
           </div>
